# ascii-video-renderer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
src/: ascii.rs  context_shape.rs  engine.rs  harri.rs  lib.rs  main.rs  player.rs  terminal.rs  unicode_blocks.rs  video.rs  wasm_exports.rs
tests/: engine_contract.rs  engine_efficiency.rs  smoke.rs
