[package]
name = "ascii-video-renderer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
font8x8 = "0.3.1"
fontdue = "0.9.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.28.1"
libc = "0.2.184"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
